Move example/bionic to just example/
The "bionic" directory is redundant, now that this repo only has Bionic
stuff.

--- a/docs/tutorials/hello_world.ipynb
+++ b/docs/tutorials/hello_world.ipynb
@@ -17,9 +17,9 @@
     "\"Hello world!\"\n",
     "\n",
     "*(The code for this example is available in the Bionic repo at\n",
-    "example/bionic/hello_world.py.)*\n",
+    "example/hello_world.py.)*\n",
     "\n",
-    ".. literalinclude:: ../../example/bionic/hello_world.py\n",
+    ".. literalinclude:: ../../example/hello_world.py\n",
     "    :language: python\n",
     "    :linenos:\n",
     "\n",
@@ -50,7 +50,7 @@
     ".. code-block:: bash\n",
     "\n",
     "    > cd bionic\n",
-    "    > python example/bionic/hello_world.py\n",
+    "    > python example/hello_world.py\n",
     "    Hello world!\n",
     "\n",
     "We can also import it in an interpreter or notebook:"
@@ -64,7 +64,7 @@
    "source": [
     "import _tutorial_setup  # Ignore this.\n",
     "\n",
-    "from example.bionic.hello_world import flow\n",
+    "from example.hello_world import flow\n",
     "flow.get('message')"
    ]
   },
