--- a/docs/tutorials/ml_workflow.ipynb
+++ b/docs/tutorials/ml_workflow.ipynb
@@ -23,9 +23,9 @@
     "Now let's consider a more complex machine learning workflow.\n",
     "\n",
     "*(The code for this example is available in the Bionic repo at\n",
-    "example/bionic/ml_workflow.py.)*\n",
+    "example/ml_workflow.py.)*\n",
     "\n",
-    ".. literalinclude:: ../../example/bionic/ml_workflow.py\n",
+    ".. literalinclude:: ../../example/ml_workflow.py\n",
     "    :language: python\n",
     "    :linenos:\n",
     "\n",
@@ -49,7 +49,7 @@
     "from bionic.util import init_basic_logging\n",
     "init_basic_logging()\n",
     "\n",
-    "from example.bionic.ml_workflow import flow\n",
+    "from example.ml_workflow import flow\n",
     "\n",
     "flow.render_dag()"
    ]
