Fix doc notebook in Python 3
I just discovered that one of the notebook cells doesn't run properly in
Python 3.  This should fix it.

--- a/docs/tutorials/ml_workflow.ipynb
+++ b/docs/tutorials/ml_workflow.ipynb
@@ -284,8 +284,8 @@
     "try:\n",
     "    flow3.get.model()\n",
     "except Exception as e:\n",
-    "    pass\n",
-    "e"
+    "    caught_exception = e\n",
+    "caught_exception"
    ]
   },
   {
