Make several dependencies optional
This moves many dependencies to optional subpackages, so that the
default installation behavior doesn't pull down things like
`google.cloud.storage` and `sklearn`.  There are now several
ways to install bionic, including:

    pip install bionic            # Just the minimal dependencies
    pip install bionic[standard]  # Commonly-used dependencies
    pip install bionic[full]      # All features
    pip install bionic[dev]       # All features plus dev stuff

I moved the `extras_require` dict from `setup.py` into a separate file
so we can give better error messages when a dependency is missing, but
also so we can enforce any version constraints that we add later.

--- a/docs/tutorials/ml_workflow.ipynb
+++ b/docs/tutorials/ml_workflow.ipynb
@@ -23,7 +23,8 @@
     "Now let's consider a more complex machine learning workflow.\n",
     "\n",
     "*(The code for this example is available in the Bionic repo at\n",
-    "example/ml_workflow.py.)*\n",
+    "example/ml_workflow.py.  Run* ``pip install bionic[examples]``\n",
+    "*to ensure you have the required dependencies.)*\n",
     "\n",
     ".. literalinclude:: ../../example/ml_workflow.py\n",
     "    :language: python\n",
