Improve wording in tutorials
- Moved some text from the tutorials into code comments.
- Made the ML Example a bit more standalone
- Fixed some bugs in the _tutorial_setup file.  (For one thing, there
were two of these files.)
- Generally cleaned up the wording.

--- a/docs/tutorials/hello_world.ipynb
+++ b/docs/tutorials/hello_world.ipynb
@@ -13,7 +13,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "Let's start with a very simple example: a workflow that generates the text\n",
+    "Let's start with a very simple example: a Bionic flow that generates the text\n",
     "\"Hello world!\"\n",
     "\n",
     "*(The code for this example is available in the Bionic repo at\n",
@@ -22,27 +22,6 @@
     ".. literalinclude:: ../../example/hello_world.py\n",
     "    :language: python\n",
     "    :linenos:\n",
-    "\n",
-    "This example does six things:\n",
-    "\n",
-    "1. Initialize a new ``FlowBuilder``.  We'll use this to define the entities we\n",
-    "   care about.  (An entity is like a variable.  It can be defined with a fixed\n",
-    "   value, or as a function of other entities.)\n",
-    "\n",
-    "2. Define a new entity called ``greeting``, with a fixed value of ``\"Hello\"``.\n",
-    "\n",
-    "3. Define another entity called ``subject``, with a fixed value of ``\"world\"``.\n",
-    "\n",
-    "4. Define a third entity called ``message``, which is constructed\n",
-    "   by taking the values of ``greeting`` and ``subject`` and combining them in\n",
-    "   a sentence.  We do this by applying the ``@builder`` decorator to a function;\n",
-    "   Bionic automatically infers the name of the new entity (``message``) and the\n",
-    "   name of its dependencies (``greeting`` and ``subject``).\n",
-    "\n",
-    "5. Assemble a ``Flow`` object, which is capable of computing any of the\n",
-    "   entities we've defined.\n",
-    "\n",
-    "6. Use our flow to compute the message ``\"Hello world!\"``\n",
     "\n",
     "We can run this code (assuming we've checked out the ``bionic`` repo) like\n",
     "this:\n",
@@ -62,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import _tutorial_setup  # Ignore this.\n",
+    "# Configure the PYTHONPATH for this notebook.\n",
+    "import _tutorial_setup\n",
     "\n",
     "from example.hello_world import flow\n",
     "flow.get('message')"
@@ -137,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This flow doesn't do much, but it illustrates how flows can be constructed, shared, and modified.\n",
+    "This flow doesn't do much, but it illustrates how flows can be constructed, used, and modified.\n",
     "The next tutorial will demonstrate a more practical example."
    ]
   }
