--- a/docs/tutorials/ml_workflow.ipynb
+++ b/docs/tutorials/ml_workflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example ML Workflow"
+    "# Example ML Flow"
    ]
   },
   {
@@ -20,7 +20,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "Now let's consider a more complex machine learning workflow.\n",
+    "We'll consider a typical (but simplified) machine learning flow.\n",
     "\n",
     "*(The code for this example is available in the Bionic repo at\n",
     "example/ml_workflow.py.  Run* ``pip install bionic[examples]``\n",
@@ -28,9 +28,29 @@
     "\n",
     ".. literalinclude:: ../../example/ml_workflow.py\n",
     "    :language: python\n",
-    "    :linenos:\n",
+    "    :linenos:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"nbsphinx": "hidden"},
+   "outputs": [],
+   "source": [
+    "# Configure the PYTHONPATH for this notebook.\n",
+    "import _tutorial_setup\n",
     "\n",
-    "This flow has a lot more going on than the previous example.\n",
+    "# Delete the Bionic cache directory, to make sure we're starting fresh.\n",
+    "import shutil\n",
+    "shutil.rmtree('./bndata', ignore_errors=True)\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
     "Let's start by importing the flow into a notebook and visualizing it."
    ]
   },
@@ -40,16 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import _tutorial_setup  # Ignore this.\n",
-    "\n",
-    "# Delete the Bionic cache directory, to make sure we're starting fresh.\n",
-    "import shutil\n",
-    "shutil.rmtree('./bndata')\n",
-    "\n",
-    "# Print all logs at INFO and above so we can see what Bionic is doing.\n",
-    "from bionic.util import init_basic_logging\n",
-    "init_basic_logging()\n",
-    "\n",
     "from example.ml_workflow import flow\n",
     "\n",
     "flow.render_dag()"
@@ -62,33 +72,17 @@
    },
    "source": [
     "This is still a toy example, but it demonstrates a classic supervised\n",
-    "machine learning workflow for binary classification:\n",
+    "machine learning flow for binary classification:\n",
     "\n",
-    "* Define some basic parameters\n",
-    "  (``random_seed``, ``test_train_split_fraction``, ``hyperparams_dict``,\n",
-    "  ``feature_inclusion_regex``)\n",
-    "* Load the data (``raw_frame``)\n",
+    "* Load data (``raw_frame``)\n",
     "* Clean it (``features_frame``)\n",
     "* Split into training and test sets (``train_frame`` and ``test_frame``)\n",
     "* Fit a model on the training data (``model``)\n",
     "* Evaluate the model on the test data (``precision_recall_frame``)\n",
     "* Visualize the model's performance (``all_hyperparams_pr_plot``)\n",
     "\n",
-    "This flow uses a few more advanced Bionic decorators:\n",
-    "\n",
-    "* :func:`@outputs <bionic.outputs>` tells Bionic to generate multiple entities from a\n",
-    "  single function (which returns a tuple)\n",
-    "* :func:`@pyplot <bionic.pyplot>` makes the Matplotlib plotting context available to\n",
-    "  the decorated function, then translates the resulting plot\n",
-    "  into an image object\n",
-    "* :func:`@gather <bionic.gather>` tells Bionic to collect the values of\n",
-    "  ``\"hyperparams_dict\"`` and ``\"precision_recall_frame\"`` into\n",
-    "  a single dataframe named ``\"gathered_frame\"``.  This might not seem\n",
-    "  very useful, since ``\"gathered_frame\"`` only has one row, but the\n",
-    "  purpose will become clear later.\n",
-    "  \n",
-    "As before, we can access any of the entity values.\n",
-    "(And since we have enabled logging, we can see every entity that Bionic computes.)"
+    "As in the previous example, we can access any of the entity values.\n",
+    "However, this time we'll enable logging so we can see every entity that Bionic computes."
    ]
   },
   {
@@ -97,6 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging; logging.basicConfig(level='INFO', format='%(message)s')\n",
+    "\n",
     "flow.get.train_frame().head()"
    ]
   },
@@ -115,8 +111,8 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "Note that each entity is computed exactly once --\n",
-    "entity values are cached both in memory and on disk to avoid redundant computation."
+    "Note that in the logs, each entity is computed exactly once --\n",
+    "every value is cached both in memory and on disk to avoid redundant computation."
    ]
   },
   {
@@ -220,9 +216,9 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "Now we have a workflow for evaluating any given set of parameters.\n",
+    "Now we have a flow for evaluating any given set of parameters.\n",
     "But usually we want to compare multiple variations at once,\n",
-    "within a single workflow.\n",
+    "within a single flow.\n",
     "Bionic lets us do this by setting multiple values for a single entity:"
    ]
   },
@@ -265,7 +261,7 @@
     "When we specify multiple values for an entity, \n",
     "Bionic creates multiple instances of that entity *and of all downstream entities*.\n",
     "If there are three instances of ``hyperparams_dict``,\n",
-    "there must also be three ``model``\\ s and three ``precision_recall_frame``\\ s.\n",
+    "there must also be three instances of ``model`` and ``precision_recall_frame``.\n",
     "\n",
     "However, we can also see that there is only one instance of ``all_hyperparams_plot_pr``.\n",
     "This is because we used the ``@gather`` decorator when defining this entity:\n",
@@ -382,12 +378,13 @@
    "source": [
     "This tutorial has illustrated four topics:\n",
     "\n",
-    "1. How to use Bionic to assemble a more complex data science workflow.\n",
+    "1. How to use Bionic to assemble a more complex data science flow.\n",
     "2. How Bionic uses caching to avoid redundant computation.\n",
-    "3. How to repurpose an existing workflow to use new parameters or data.\n",
-    "4. How to use multiplicity to compare several variations within a single workflow.\n",
+    "3. How to repurpose an existing flow to use new parameters or data.\n",
+    "4. How to use multiplicity to compare several variations within a single flow.\n",
     "\n",
-    "These concepts should be enough to get started building real workflows!"
+    "These concepts should be enough to get started building real flows.\n",
+    "The next section of the documentation will discuss the underlying concepts in Bionic."
    ]
   }
  ],
