Update docs to support ZSH
Replaced all instances of

    pip install bionic[SOMETHING]

with

    pip install 'bionic[SOMETHING]'

The former doesn't work on Zsh, since that shell assigns a special
meaning to square brackets. Having to add the quotes is kind of
annoying, but now Zsh is the default shell on new Macbooks and it
generates a cryptic error if you don't add the quotes, so it seems
worthwhile to try to help newcomers avoid this.

--- a/docs/tutorials/ml_workflow.ipynb
+++ b/docs/tutorials/ml_workflow.ipynb
@@ -23,7 +23,7 @@
     "We'll consider a typical (but simplified) machine learning flow.\n",
     "\n",
     "*(The code for this example is available in the Bionic repo at\n",
-    "example/ml_workflow.py.  Run* ``pip install bionic[examples]``\n",
+    "example/ml_workflow.py.  Run* ``pip install 'bionic[examples]'``\n",
     "*to ensure you have the required dependencies.)*\n",
     "\n",
     ".. literalinclude:: ../../example/ml_workflow.py\n",
