Add an extended ML example
Extend the current toy ML example to use a bigger dataset and compute
ROC AUC. This also extends the CLI options, which are now only available
for the extended version (which makes the ML tutorial code simpler).

--- a/docs/tutorials/ml_workflow.ipynb
+++ b/docs/tutorials/ml_workflow.ipynb
@@ -78,7 +78,7 @@
     "* Clean it (``features_frame``)\n",
     "* Split into training and test sets (``train_frame`` and ``test_frame``)\n",
     "* Fit a model on the training data (``model``)\n",
-    "* Evaluate the model on the test data (``precision_recall_frame``)\n",
+    "* Evaluate the model on the test data (``predictions_frame``, ``precision_recall_frame``)\n",
     "* Visualize the model's performance (``all_hyperparams_pr_plot``)\n",
     "\n",
     "As in the previous example, we can access any of the entity values.\n",
